# ai-stock-lens

./: .gitignore  DESIGN.md  README.md  dev.sh  docker-compose.yaml  gpt5.5_prompt_review_suggestions.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  scheduler.py
backend/app/ai/: analyzer.py  client.py  normalizers.py  prompts.py
backend/app/api/: action_plan.py  analysis.py  chat.py  compare.py  groups.py  market.py  positions.py  review.py  settings.py  signals.py  stocks.py  sync.py  watchlist.py
backend/app/datasource/: __init__.py  baostock_provider.py  base.py  base_provider.py  eastmoney_provider.py  router.py  sina_provider.py  tencent_provider.py
backend/app/features/: __init__.py  quant_factors.py
backend/app/indicators/: engine.py  ma.py  mean_reversion.py  oscillators.py  patterns.py  risk.py  signals.py  strength.py  volume.py  weekly.py
backend/app/models/: ai_report.py  ai_report_review.py  capital_flow.py  kline.py  position.py  scenario_alert.py  setting.py  stock.py  stock_group.py  sync_log.py
backend/app/services/: analysis_service.py  chat_service.py  compare_math.py  compare_service.py  market_service.py  position_service.py  review_service.py  scenario_alert_service.py  settings_service.py  signals_service.py  stock_service.py  sync_service.py  trader_service.py
backend/scripts/: backfill_reviews.py  backfill_turnover.py
backend/tests/: e2e_ai_report.py  smoke_compare.py  smoke_indicators.py  smoke_signals.py  test_analysis_cache.py  test_quant_factors.py  test_router.py
(+100 files in other folders)
